--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "hashids": "^1.0.2",
-    "redis": "^2.4.2"
+    "redis": "^2.4.2",
+    "url-validator": "^2.0.3"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
