--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "URL shortener PoC",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover _mocha -- --compilers coffee:coffee-script/register test/"
+    "test": "istanbul cover _mocha -- --compilers coffee:coffee-script/register test/",
+    "check": "jshint *.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "istanbul": "^0.4.2",
+    "jshint": "^2.9.1",
     "mocha": "^2.4.5",
     "supertest": "^1.2.0"
   }
