--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/oabdoun/shlue#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "bunyan": "^1.7.1",
     "express": "^4.13.4",
     "hashids": "^1.0.2",
+    "morgan": "^1.7.0",
     "redis": "^2.4.2",
     "url-validator": "^2.0.3"
   },
@@ -29,6 +31,7 @@
     "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
     "mocha": "^2.4.5",
+    "sinon": "^1.17.3",
     "supertest": "^1.2.0"
   }
 }
